testdata/baselines/reference/compiler/distributeControlFlowCorrelatedUnion.errors.txt
distributeControlFlowCorrelatedUnion.ts(10,25): error TS2345: Argument of type 'A | B' is not assignable to parameter of type 'never'.
  The intersection 'A & B' was reduced to 'never' because property 'type' has conflicting types in some constituents.
    Type 'A' is not assignable to type 'never'.
distributeControlFlowCorrelatedUnion.ts(16,27): error TS2322: Type 'string' is not assignable to type 'never'.
distributeControlFlowCorrelatedUnion.ts(16,38): error TS2322: Type 'true' is not assignable to type 'never'.
distributeControlFlowCorrelatedUnion.ts(19,29): error TS2322: Type '"a"' is not assignable to type '"b"'.
distributeControlFlowCorrelatedUnion.ts(19,40): error TS2322: Type 'boolean' is not assignable to type 'string'.


==== distributeControlFlowCorrelatedUnion.ts (5 errors) ====
    type A = { type: "a", value: boolean }
    type B = { type: "b", value: string }
    
    const handlers = {
      a: (action: A) => {},
      b: (action: B) => {},
    }
    
    const handle = (action: A | B) => {
      handlers[action.type](action)
                            ~~~~~~
!!! error TS2345: Argument of type 'A | B' is not assignable to parameter of type 'never'.
!!! error TS2345:   The intersection 'A & B' was reduced to 'never' because property 'type' has conflicting types in some constituents.
!!! error TS2345:     Type 'A' is not assignable to type 'never'.
    
      distribute (action) {
        handlers[action.type](action)
      }
    
      handlers[action.type]({ type: "a", value: true })
                              ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'never'.
                                         ~~~~~
!!! error TS2322: Type 'true' is not assignable to type 'never'.
    
      distribute (action) {
        handlers[action.type]({ type: "a", value: true })
                                ~~~~
!!! error TS2322: Type '"a"' is not assignable to type '"b"'.
!!! related TS6500 distributeControlFlowCorrelatedUnion.ts:2:12: The expected type comes from property 'type' which is declared here on type 'B'
                                           ~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
!!! related TS6500 distributeControlFlowCorrelatedUnion.ts:2:23: The expected type comes from property 'value' which is declared here on type 'B'
      }
    }
    
    
    
    
    